Client/src/style.scss
$ourBlue: #1e328d;
$ourOrange: #fc3e03;

.app {
  width: 100%;
  .container {
    padding-left: 0%;
    padding-right: 0%;
    max-width: 100%;
    .link {
      text-decoration: none;
      color: inherit;
    }

    // Login & Register pages

    .auth {
      display: flex;
      flex-direction: column; // zorgt ervoor dat alle elementen onder elkaar komen te staan
      align-items: center;
      padding-top: 2%;
      height: 100vh;
      background-color: $ourBlue;
    }

    h1 {
      font-size: 25px;
      color: white;
    }

    form {
      display: flex;
      flex-direction: column;
      padding: 3.5%;
      background-color: white;
      width: 14%;
      gap: 2.5vh;
      border-radius: 10%;
      box-sizing: content-box;

      input {
        padding: 5%;
        border: none;
        border-bottom: 1px solid $ourBlue;
        color: $ourBlue;
      }

      button {
        padding: 5%;
        border: none;
        background-color: $ourOrange;
        color: white;
        cursor: pointer;
      }

      p {
        font-size: 12px;
        font-weight: 500; // zorgt ervoor dat de weergegeven tekst dikker is
        text-align: center;
        margin-bottom: -4%; // aantal px negatief om de standaard margin van de form tegen te werken
        color: red;
      }

      span {
        font-size: 12px;
        text-align: center;
        margin-bottom: -10%;
      }

      .linkStyle {
        font-size: 12px;
        margin: auto;
      }
    }

    // Logo

    .trademark {
      .container {
        // ALEXANDRE, VRAAG VOOR ASSISTENT OF TEAM LEDEN: Als ik dit ".container" stukje weg doe, dan werkt onze code nog maar als ik de div "container" in "Trademark.jsx" weg doe, dan werkt mijn code niet meer, ook al voeg ik het daarna terug, ik moet dit ".container" stukje terug toevoegen zodat mijn code werkt
        .logo {
          display: flex;
          padding-top: 1.5%;
          justify-content: center;
          background-color: $ourBlue;
          img {
            width: 15%;
          }
        }
      }
    }
  }

  // HOME
  .home {
    display: flex;
    justify-content: center;

    .posts {
      width: 1000px;
      margin-top: 50px;
      display: flex;
      flex-direction: column;
      gap: 100px;

      .post {
        display: flex;
        gap: 10px;

        &:nth-child(2n + 1) {
          flex-direction: row-reverse;
        }

        .img {
          flex: 2;
          position: relative;

          img {
            border: 5px solid rgb(2, 23, 17);
            width: 100%;
            height: 100%;
            height: 250px;
            object-fit: cover;
            border-radius: 25px;
            box-shadow: rgba(1, 251, 247, 0.4) -5px 5px,
              rgba(1, 251, 247, 0.3) -10px 10px,
              rgba(1, 251, 247, 0.2) -15px 15px,
              rgba(1, 251, 247, 0.1) -20px 20px,
              rgba(1, 251, 247, 0.05) -25px 25px;
            --x: 10px;
            --y: 20px;
            margin: 30px;
            transform-origin: left;
            transform: perspective(10000px) rotateY(40deg);
          }
          img:hover {
            box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);
          }
        }

        .content {
          flex: 3;
          display: flex;
          flex-direction: column;
          justify-content: space-between;

          .stars {
            flex-direction: row;
            .checked {
              color: orange;
            }
          }

          p {
            font-size: 20px;
          }

          button {
            width: max-content;
            padding: 10px 20px;
            border: none;
            cursor: pointer;
            background-color: white;
            border: 1px solid $ourBlue;
            color: $ourBlue;

            &:hover {
              border: 1px solid white;
              background-color: rgba(1, 251, 247, 0.4);
              color: black;
            }
          }
        }
      }
    }
  }

  .navigationbar {
    .navbar {
      background-color: $ourBlue;
      height: 10vh;
      position: relative;
      min-height: 60px;
    }

    .navbar-brand {
      height: 100%;
      color: white;
      img {
        height: 100%;
      }
    }

    .nav-link {
      color: white;
      margin-inline: 15px;
      background-color: $ourBlue;
      max-width: 200px;
      margin-left: auto;
      //margin-right: 0%;
    }

    .right_aligned {
      justify-content: flex-end;
      float: right;
    }
  }
}

